--- a/EDGELEDGER_WEBSITE/index.html
+++ b/EDGELEDGER_WEBSITE/index.html
@@ -35,9 +35,8 @@
       The Sky Is The Limit
     </h1>
     <p class="lead">
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga, earum nostrum rerum laudantium eligendi cumque?
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga, earum nostrum rerum laudantium eligendi cumque?</p>
       <a href="#what" class="btn">Read More</a>
-    </p>
   </div>
 </header>
 </body>
