--- a/EDGELEDGER_WEBSITE/index.html
+++ b/EDGELEDGER_WEBSITE/index.html
@@ -37,7 +37,115 @@
     <p class="lead">
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga, earum nostrum rerum laudantium eligendi cumque?</p>
       <a href="#what" class="btn">Read More</a>
-  </div>
+    </div>
 </header>
+
+ <!-- Section: What We Do -->
+    <section id="what" class="bg-light py-1">
+      <div class="container">
+        <h2 class="m-heading text-center"><span class="text-primary">What</span> We Do</h2>
+        <div class="items">
+          <div class="item">
+            <i class="fas fa-university fa-2x"></i>
+            <div>
+              <h3>Investment Banking</h3>
+              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Mollitia, laboriosam?</p>
+            </div>
+          </div>
+          <div class="item">
+            <i class="fas fa-book-reader fa-2x"></i>
+            <div>
+              <h3>Portfolio Management</h3>
+              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Mollitia, laboriosam?</p>
+            </div>
+          </div>
+          <div class="item">
+            <i class="fas fa-pencil-alt fa-2x"></i>
+            <div>
+              <h3>Tax & Custodial</h3>
+              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Mollitia, laboriosam?</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Section: Who We Are -->
+    <section id="who">
+      <div class="who-img"></div>
+      <div class="who-text bg-dark p-2">
+        <h2 class="m-heading"><span class="text-primary">Who</span> We Are</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores laborum nulla incidunt velit eveniet harum numquam voluptas, libero consequuntur? Voluptatum nemo recusandae ea repellendus possimus autem eaque itaque facere sed.</p>
+        <h3>Our Team</h3>
+        <ul class="list">
+          <li>Dan Smith: CEO</li>
+          <li>Sophia Meztli: CFO</li>
+          <li>Madelaine Shanae: Lead Accountant</li>
+          <li>Jemma Heida: Investment Manager</li>
+          <li>Hagano Dan: Senior Accountant</li>
+        </ul>
+      </div>
+    </section>
+
+  <!-- Section: Clients -->
+  <section id="clients" class="py-1">
+    <div class="container">
+      <h2 class="m-heading text-center">
+        <span class="text-primary">Our</span> Clients
+      </h2>
+      <div class="items py-1">
+        <div><img src="./img/logos/logo2.png" alt="Client"></div>
+        <div><img src="./img/logos/logo3.png" alt="Client"></div>
+        <div><img src="./img/logos/logo4.png" alt="Client"></div>
+        <div><img src="./img/logos/logo5.png" alt="Client"></div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Section: Contact -->
+  <section id="contact">
+    <div class="contact-form bg-primary p-2">
+      <h2 class="m-heading">Contact Us</h2>
+      <p>Please use the form below to contact us</p>
+      <form action="">
+        <div class="form-group">
+          <label for="name">Name</label>
+          <input type="text" name="name" id="name" placeholder="Enter Name"> 
+        </div>
+        <div class="form-group">
+          <label for="email">Name</label>
+          <input type="email" name="email" id="email" placeholder="Enter Email"> 
+        </div>
+        <div class="form-group">
+          <label for="phone">Phone Number</label>
+          <input type="text" name="phone" id="phone" placeholder="Enter Phone Number"> 
+        </div>
+        <div class="form-group">
+          <label for="message">Message</label>
+          <textarea name="message" id="message" placeholder="Enter Message"></textarea>
+        </div>
+        <input type="submit" value="Send" class="btn btn-dark">
+      </form>
+    </div>
+    <div class="map"><img src="./img/24e8ee1d60c7ebba2f5f85d79bffa232_cr.png" alt=""></div>
+  </section>
+
+  <!-- Footer -->
+  <footer id="main-footer" class="bg-dark text-center py-1">
+    <div class="container">
+      <p>Copyright &copy; 2019, EdgeLedger, All Rights Reserved</p>
+    </div>
+  </footer>
+
+
+  <!-- jQuery CDN -->
+  <script
+  src="https://code.jquery.com/jquery-3.4.0.min.js"
+  integrity="sha256-BJeo0qm959uMBGb65z40ejJYGSgR7REI4+CW1fNKwOg="
+  crossorigin="anonymous"></script>
+
+  <!-- Local JS -->
+  <script src="./js/main.js"></script>
+  
 </body>
 </html>
