Remove map image

--- a/EDGELEDGER_WEBSITE/index.html
+++ b/EDGELEDGER_WEBSITE/index.html
@@ -127,7 +127,7 @@
         <input type="submit" value="Send" class="btn btn-dark">
       </form>
     </div>
-    <div class="map"><img src="./img/24e8ee1d60c7ebba2f5f85d79bffa232_cr.png" alt=""></div>
+    <!-- <div class="map"><img src="./img/24e8ee1d60c7ebba2f5f85d79bffa232_cr.png" alt=""></div> -->
   </section>
 
   <!-- Footer -->
@@ -146,6 +146,6 @@
 
   <!-- Local JS -->
   <script src="./js/main.js"></script>
-  
+
 </body>
 </html>
